...

        <LinearLayout
            android:id="@+id/top_menu_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/responseFeedMenuBotton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/roommateFeedMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

        <LinearLayout
            android:id="@+id/top_menu_create_a_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/address"
                android:layout_width="394dp"
                android:layout_height="36dp"
...
                android:background="@drawable/edit_text_round"
                android:elevation="-1dp"
                android:ems="10"
                android:hint="Address (Street Address, City, State)"
                android:inputType="textPersonName"
...

            <EditText
                android:id="@+id/rent"
                android:layout_width="398dp"
                android:layout_height="34dp"
...

            <EditText
                android:id="@+id/utilities"
                android:layout_width="395dp"
                android:layout_height="34dp"
...

            <EditText
                android:id="@+id/numBeds"
                android:layout_width="399dp"
                android:layout_height="35dp"
...

            <EditText
                android:id="@+id/dailySchedule"
                android:layout_width="393dp"
                android:layout_height="39dp"
...

            <EditText
                android:id="@+id/academicFocus"
                android:layout_width="398dp"
                android:layout_height="39dp"
...

            <EditText
                android:id="@+id/otherInfo"
                android:layout_width="394dp"
                android:layout_height="133dp"
...

            <EditText
                android:id="@+id/personality"
                android:layout_width="398dp"
                android:layout_height="44dp"
...

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="393dp"
                android:layout_height="562dp"
...

            <Button
                android:id="@+id/button"
                android:layout_width="176dp"
                android:layout_height="90dp"
...
