...

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xxlarge" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:background="@drawable/edit_text_round"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_smlarge">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round"
                    android:hint="@string/hint_password"
                    android:imeActionId="6"
                    android:imeOptions="actionUnspecified"
...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button.Accent.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_dark"
                    android:backgroundTint="@color/grey_5"
...
